# Crypto-Triangular-Arbitrage-Bot

./: .gitignore  CMakeLists.txt
config/: bot_config.json  pairs.json
include/core/: orderbook.hpp  thread_pool.hpp  trade_utils.hpp  triangle.hpp  wallet.hpp
include/engine/: simulator.hpp  triangle_scanner.hpp
include/exchange/: binance_account_sync.hpp  binance_dry_executor.hpp  binance_real_executor.hpp  i_exchange_executor.hpp  key_encryptor.hpp
src/: main.cpp
src/core/: orderbook.cpp  trade_utils.cpp  wallet.cpp
src/engine/: simulator.cpp  triangle_scanner.cpp
src/exchange/: binance_account_sync.cpp  binance_dry_executor.cpp  binance_real_executor.cpp  key_encryptor.cpp
src/tools/: encrypt_keys.cpp
